@@ -5,6 +5,10 @@ HISTORY
 1.1rc13 (Unreleased)
 --------------------
 
+- Get the portal_url and navigation_root_url in a more sane fashion.
+  Fixes https://dev.plone.org/plone/ticket/10423.
+  [davisagli]
+
 - Make sure paragraphs without a CSS class show up as "Normal paragraph"
   in the styles menu. Fixes http://dev.plone.org/plone/ticket/10532.
   [davisagli]
